--- a/styles.css
+++ b/styles.css
@@ -7818,7 +7818,7 @@ img {
 
 .lottie-animation-2 {
   z-index: 9999999;
-  background-color: var(--ai-gen-82921b10-4b39-48f0-b346-808cf4903d29-1752352404867---core-neutral-color--neutral-inverse);
+  background-image: linear-gradient(to bottom, var(--ai-gen-82921b10-4b39-48f0-b346-808cf4903d29-1752352404867---core-neutral-color--neutral-secondary), var(--ai-gen-82921b10-4b39-48f0-b346-808cf4903d29-1752352404867---core-neutral-color--neutral-secondary));
   position: fixed;
   inset: 0%;
 }
