--- a/styles.css
+++ b/styles.css
@@ -3451,6 +3451,7 @@ textarea.w-input, textarea.w-select {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
+  margin-left: -26px;
   display: flex;
 }
 
@@ -9223,6 +9224,8 @@ img {
     justify-content: flex-start;
     align-items: stretch;
     width: 100%;
+    max-width: 320px;
+    margin-left: -29px;
     display: grid;
   }
 
@@ -9594,6 +9597,10 @@ img {
 
   #Coaches-Grid.w-node-_46ac3d76-97dc-a1c1-1679-12633f47bf78-a571e64b {
     grid-column: 1 / 6;
+  }
+
+  #w-node-cf636076-9aca-87c6-a2e4-75d83b062b83-a571e64b {
+    justify-self: center;
   }
 
   #w-node-_2cfbde3f-92e9-521c-9300-ff3c0e6ffd5a-0e6ffd4d.w-node-_866965d9-c1a8-89b2-0bc8-d39bd9a28eb6-37b913f1, #w-node-_2cfbde3f-92e9-521c-9300-ff3c0e6ffd63-0e6ffd4d.w-node-_866965d9-c1a8-89b2-0bc8-d39bd9a28ebd-37b913f1 {
